customized scrollbar (need to fix overfrow)

--- a/src/components/burger-ingridients/burger-ingridients.module.scss
+++ b/src/components/burger-ingridients/burger-ingridients.module.scss
@@ -3,8 +3,10 @@
   max-width: 600px;
   display: flex;
   flex-direction: column;
-  flex-wrap: wrap;
-  // overflow: hidden;
+  //   flex-wrap: wrap;
+  //   overflow: scroll;
+  //   height: 760px;
+  // max-height: 1200px;
 }
 
 .tab {
@@ -12,7 +14,6 @@
 }
 
 .section {
-  
   display: flex;
   flex-direction: column;
 }
@@ -22,12 +23,43 @@
 }
 
 .products {
- 
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
 }
 
 p {
-    max-width: 272px;
+  max-width: 272px;
+}
+.scroll {
+  display: flex;
+  flex-direction: column;
+  padding-right: 16px;
+  max-width: 608px;
+  height: 100%;
+  max-height: 760px;
+  overflow-y: auto;
+  scroll-behavior: smooth;
+}
+
+.scroll::-webkit-scrollbar {
+  width: 8px;
+}
+
+.scroll::-webkit-scrollbar-thumb {
+  background-color: #8585ad;
+  border-radius: 4px; 
+}
+
+.scroll::-webkit-scrollbar-thumb:hover {
+  background-color: #585876;
+}
+
+.scroll::-webkit-scrollbar-track {
+    background-color: #2F2F37;
+}
+
+.scroll {
+  scrollbar-width: thin; 
+  scrollbar-color: #8585ad #2F2F37; 
 }
